fix vertical alignment in Flex forms

--- a/flex/src/main/resources/defaults.css
+++ b/flex/src/main/resources/defaults.css
@@ -133,6 +133,13 @@ ApplicationControlBar
   horizontalAlign: left;
 }
 
+.labelComponentCell
+{
+  verticalAlign: top;
+  horizontalAlign: left;
+  paddingTop: 4;
+}
+
 .borderContainer
 {
   horizontalGap: 1;
